# ims-lib

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  conanfile.py  ims_api_h.cmake
cmake/: ims_api.cmake  ims_api_h.cmake  packaging.cmake
inc/: AcoustoOptics.h  CM_CYUSB.h  CM_ENET.h  CM_FTDI.h  CM_RS422.h  CS_ETH.h  CS_RS422.h  Compensation.h  ConnectionList.h  FileSystem_p.h  HostReport.h  IConnectionManager.h  IEventTrigger.h  IMSConstants.h  IMSSystem.h  IMSTypeDefs.h  IMSTypeDefs_p.h  Image.h  ImageOps.h  Image_p.h  LibVersion.h  MessageEvent.h  PrivateUtil.h  SignalPath.h  SystemFunc.h  tftp_client.h  tftp_packet.h
include/: AcoustoOptics.h  Auxiliary.h  BulkVerifier.h  CM_CYUSB.h  CM_Common.h  CM_ENET.h  CM_FTDI.h  CM_RS422.h  CS_ETH.h  CS_RS422.h  Compensation.h  ConnectionList.h  Containers.h  DeviceReport.h  Diagnostics.h  EEPROM.h  FileSystem.h  FileSystem_p.h  FirmwareUpgrade.h  IConnectionManager.h  IConnectionSettings.h  IEventHandler.h  IEventTrigger.h  IMSConstants.h  IMSSystem.h  IMSTypeDefs_p.h  IOReport.h  Image.h  ImageOps.h  Image_p.h  LibVersion.h  Message.h  MessageRegistry.h  PrivateUtil.h  ReportManipulation.h  SignalPath.h  SystemFunc.h  ToneBuffer.h  WaveShaping.h
lib/CyAPI/: CyAPI.cpp
lib/CyAPI/inc/: CyAPI.h
lib/enumser/: enumser.cpp  enumser.h
lib/sqlite3/: readonlymemvfs.cpp
res/: build.sh  build.sh.bak  imshw.aps  imshw.db  imshw.h  imshw.rc  resource.h  settings.ini  settings_ini.h
src/: AcoustoOptics.cpp  Auxiliary.cpp  BulkVerifier.cpp  CM_CYUSB.cpp  CM_Common.cpp  CM_ENET.cpp  CM_FTDI.cpp  CM_RS422.cpp  CS_ETH.cpp  CS_RS422.cpp  Compensation.cpp  ConnectionList.cpp  ConnectionManager.cpp  Containers.cpp  DeviceReport.cpp  Diagnostics.cpp  EEPROM.cpp  FileSystem.cpp  FirmwareUpgrade.cpp  HostReport.cpp  IEventHandler.cpp  IEventTrigger.cpp  IMSSystem.cpp  IMSTypeDefs.cpp  IOReport.cpp  Image.cpp  ImageOps.cpp  ImageProject.cpp  LibVersion.cpp  Message.cpp  PrivateUtil.cpp  ReportManipulation.cpp  SignalPath.cpp  SystemFunc.cpp  ToneBuffer.cpp  WaveShaping.cpp  tftp_client.cpp  tftp_packet.cpp
